# ai-study

./: .gitignore  app_run.sh  docker.sh  package-lock.json  package.json
backend/: README.md  alembic.ini  pyproject.toml  requirements.txt  test_auth.py  test_batch_import.py
backend/alembic/versions/: xxx_update_user_roles.py
backend/app/: __init__.py  main.py
backend/app/core/: auth.py  cache.py  config.py  exceptions.py  logging.py  password.py  permissions.py  security.py
backend/app/crud/: application.py  base.py  question.py  user.py
backend/app/db/: __init__.py  base.py  init_db.py  neo4j_utils.py  session.py
backend/app/dependencies/: __init__.py  auth.py  db.py
backend/app/models/: VectorStore.py  __init__.py  application.py  assignment.py  base.py  book.py  class_model.py  knowledge.py  knowledge_point.py  log.py  question.py  resource.py  subject.py  user.py
backend/app/repositories/: __init__.py
backend/app/schemas/: application.py  book.py  class_schema.py  knowledge.py  knowledge_point.py  question.py  resource.py  response.py  subject.py  user.py
backend/app/services/: difficulty_evaluator.py  document_splitter.py  embedding.py  error_analysis.py  error_analyzer.py  knowledge_analyzer.py  knowledge_extraction.py  knowledge_graph_builder.py  knowledge_point_audit.py  knowledge_point_service.py  knowledge_point_validator.py  learning_predictor.py  paper_generator.py  personalized_learning.py  question_vectorization.py  recommendation.py
backend/app/tasks/: __init__.py  celery_tasks.py  tasks.py
backend/migrations/: env.py
(+97 files in other folders)
