[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["zh"]
[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
uvicorn = "^0.27.1"
sqlalchemy = "^2.0.25"
asyncpg = "^0.30.0"
pydantic = {extras = ["email"], version = "^2.5.3"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
tenacity = "^8.2.3"
# 知识点体系管理相关依赖
neo4j = "^5.17"
elasticsearch = "^8.11"
redis = "^5.0"
python-slugify = "^8.0"
alembic = "^1.13"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
